--- a/ui/package.json
+++ b/ui/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.0",
     "globals": "^15.11.0",
+    "i18next": "^23.16.5",
     "postcss": "^8.4.48",
+    "react-i18next": "^15.1.1",
     "storybook": "^8.4.2",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
