--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-essentials": "^8.4.2",
     "@storybook/addon-interactions": "^8.4.2",
     "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/addon-themes": "^8.4.2",
     "@storybook/blocks": "^8.4.2",
     "@storybook/react": "^8.4.2",
     "@storybook/react-vite": "^8.4.2",
@@ -36,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "globals": "^15.11.0",
     "i18next": "^23.16.5",
     "postcss": "^8.4.48",
