--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,8 @@
     "@antfu/eslint-config": "^3.8.0",
     "@eslint-react/eslint-plugin": "^1.16.1",
     "@eslint/js": "^9.13.0",
+    "@iconify-json/mdi": "^1.2.1",
+    "@iconify/react": "^5.0.2",
     "@storybook/addon-essentials": "^8.4.2",
     "@storybook/addon-interactions": "^8.4.2",
     "@storybook/addon-onboarding": "^8.4.2",
@@ -29,6 +31,8 @@
     "@storybook/react": "^8.4.2",
     "@storybook/react-vite": "^8.4.2",
     "@storybook/test": "^8.4.2",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -46,6 +50,7 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
+    "unplugin-icons": "^0.20.1",
     "vite": "^5.4.10"
   },
   "eslintConfig": {
